src/app/modules/home/home.component.scss
.login-form {
  max-width: 300px;
}

.login-form-forgot {
  float: right;
}

.login-form-button {
  width: 100%;
}

.register-button {
  background-color: black;
  color: white;
  border-radius: 10px;
  padding: 30px 65px;
  font-weight: 600;
  font-size: 20px;
  line-height: 24px;
  height: auto;
  margin-top: 70px;
  border: 0;
  &-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
}

.text {
  color: rgb(179, 179, 179);
  &-main {
    color: #ffffff;
    font-weight: bold;
    font-size: 30px;
    line-height: 36px;
    margin-bottom: 15px
  }
  &-secondary {
    font-weight: normal;
    font-size: 14px;
    line-height: 17px;
  }
  &-description {
    margin-top: 23px;
    font-size: 12px;
    line-height: 15px;
    letter-spacing: 1.71429px;
  }
}

.container {
  button {
    flex-shrink: 0;
  }
  display: flex;
  max-width: 1080px;
  width: 100%;
  justify-content: space-between;
}

.home {
  height: 100vh;
  padding: 0 30px;
  background-color: #27303c;
  display: flex;
  justify-content: center;
  align-items: center;
  &-container {
    display: flex;
    flex-direction: column;
  }
  &-content {
    display: flex;
    flex-direction: column;
  }
  &-logo-container {
    margin-top: 120px;
    display: flex;
    flex-direction: column;
  }
}

.image {
  width: 136px;
  margin-bottom: 30px;
}

@media (max-width: 576px) {
  .container {
    flex-direction: column;
  }

  .register-button {
    padding: 30px 0;
  }
}

